whoops. Bottom "LEFT" of the page.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-A quick little jQuery code that adds a widget to the bottom right of the page
+A quick little jQuery code that adds a widget to the bottom left of the page
 allowing the user to change the 
 h1, h2, h3, h4, h5, h6
 OR
